--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                             </div><!-- end Inner row -->
                             <!-- Google Maps -->
                             <div class="google-maps">
-                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d109552.19658281952!2d75.78663299928208!3d30.900473636616745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391a837462345a7d%3A0x681102348ec60610!2sLudhiana%2C+Punjab+141001!5e0!3m2!1sen!2sin!4v1461389509410" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+                                <iframe src="https://www.google.co.in/maps/place/Koorkenchery,+Thrissur,+Kerala/@10.5088171,76.2050132,15.48z/data=!4m5!3m4!1s0x3ba7ee2fabdc93b3:0xa45694bd968e8cb0!8m2!3d10.5052847!4d76.2104509" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
                             </div>
                             <!-- end Google Maps -->
                         </div>
