--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-        <title>Saviyo's Resume &amp; vCard</title>
+        <title>Saviyo's Resume</title>
         <!-- Favicon -->
         <link rel="shortcut icon" href="images/favicon.png">
         <!-- ##### STYLESHEETS ##### -->
@@ -526,7 +526,7 @@
                             </div><!-- end Inner row -->
                             <!-- Google Maps -->
                             <div class="google-maps">
-                                <iframe src="https://www.google.co.in/maps/place/Koorkenchery,+Thrissur,+Kerala/@10.5088171,76.2050132,15.48z/data=!4m5!3m4!1s0x3ba7ee2fabdc93b3:0xa45694bd968e8cb0!8m2!3d10.5052847!4d76.2104509" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+                                <iframe src="https://www.google.com/maps/place/Grace+Park+Building,+Kodungallur+-+Shornur+Rd,+Koorkenchery,+Thrissur,+Kerala+680007/@10.5009612,76.2097816,17z/data=!4m13!1m7!3m6!1s0x3ba7ee2fabdc93b3:0xa45694bd968e8cb0!2sKoorkenchery,+Thrissur,+Kerala!3b1!8m2!3d10.5052847!4d76.2104509!3m4!1s0x3ba7ee260b9f4149:0xc833af5f44a4060a!8m2!3d10.5010403!4d76.2119703" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
                             </div>
                             <!-- end Google Maps -->
                         </div>
@@ -545,9 +545,9 @@
                         <div class="col-sm-6 text-left">
                             Copyright &copy; 2022 Saviyo. All Right Reserved 
                         </div>
-                        <div class="col-sm-6 text-right">
-                            Designed With <i class="fa fa-heart-o red"></i> By <a target="_blank" href="https://www.facebook.com/iamgurdeeposahan">Osahan Studio</a>
-                        </div>
+                        //<div class="col-sm-6 text-right">
+                            //Designed With <i class="fa fa-heart-o red"></i> By <a target="_blank" href="https://www.instagram.com/saviyotherattil/">Saviyo Studio</a>
+                        //</div>
                     </div>
                       
                     </div>
