--- a/index.html
+++ b/index.html
@@ -545,9 +545,9 @@
                         <div class="col-sm-6 text-left">
                             Copyright &copy; 2022 Saviyo. All Right Reserved 
                         </div>
-                        //<div class="col-sm-6 text-right">
-                            //Designed With <i class="fa fa-heart-o red"></i> By <a target="_blank" href="https://www.instagram.com/saviyotherattil/">Saviyo Studio</a>
-                        //</div>
+                        <div class="col-sm-6 text-right">
+                            Designed With <i class="fa fa-heart-o red"></i> By <a target="_blank" href="https://www.instagram.com/saviyotherattil/">Saviyo Studio</a>
+                        </div>
                     </div>
                       
                     </div>
