--- a/index.html
+++ b/index.html
@@ -57,15 +57,10 @@
 		</div>
 		<div class="fixed-right-socials">
       <ul class="list-unstiled">
-        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-		<li><a href="#"><i class="fa fa-instagram"></i></a></li>
-		<li><a href="#"><i class="fa fa-skype"></i></a></li>
-		<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-		<li><a href="#"><i class="fa fa-behance"></i></a></li>
-		<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
+	<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+		
       </ul>
     </div>
         <!-- Sidebar -->
@@ -76,7 +71,7 @@
                         <!-- Avatar -->
 						<img class="user-pic" src="007 man (5).jpg" alt="">
 						<div class="signature">
-							<img class="img-responsive" alt="signature" src="images/signature.png">
+							<img class="img-responsive" alt="signasddsfture" src="images/signature.png">
 						</div>
                         <!-- Menu -->
                         <div class="menu">
