--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                     <a href="#testimonial">Testimonial</a>
                                 </li>
                                 <li>
-                                    <a href="#contact">Contact</a>
+                                    <a href="#contact">Conxxctact</a>
                                 </li>
                             </ul>
                         </div><!-- end Menu -->
