--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
                                 <h2><span>01</span>About me</h2>
 							</div><!-- end Section Title -->
 							<h1>Hello, I am <strong>Saviyo Therattil</strong> <br>Designer and <span class="bg-color">Front-end Developer</span></h1>
-							<p>Ultricies nisi voluptatem, illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo nemo enim ipsam voluptatem. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque latu dantium, totam rem aperiam, eaque ipsa quae ab illo tempor dignissim at. </p>
+							<p>A determined and passionate person who focuses on making the world a better place for all.
+I am currently in my third year of Mechatronics Engineering at Jyothi Engineering College. Quality-oriented professional with proven communication, problem-solving and creative thinking skills. Always open to advice, suggestions and ideas. Aiming to leverage my abilities to successfully fill the Industrial Automation Engineer role at a reputable Multi-National Company. Frequently praised as hard-working by my peers, I can be relied upon to help your company achieve its goals. </p>
 							
                             <div class="skills">
                                 <!-- Skill 1 -->
