--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <div class="col-xs-12 col-sm-2 sidebar">
                     <div class="col-sm-2 sidebarWrapper">
                         <!-- Avatar -->
-						<img class="user-pic" src="007 man (5).jpg" alt="">
+						<img class="user-pic" src="sharp guy.jpg" alt="">
 						<div class="signature">
 							<img class="img-responsive" alt="signasddsfture" src="images/signature.png">
 						</div>
@@ -133,7 +133,7 @@ I am currently in my third year of Mechatronics Engineering at Jyothi Engineerin
                             <div class="skills">
                                 <!-- Skill 1 -->
                                 <div class="skill-outer">
-                                    <h4>HTML5 &amp; CSS3<span>100%</span></h4>
+                                    <h4>MATLAB<span>100%</span></h4>
                                     <div class="progress progress-striped active">
                                         <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;">
                                         </div>
@@ -141,7 +141,7 @@ I am currently in my third year of Mechatronics Engineering at Jyothi Engineerin
                                 </div>
                                 <!-- Skill 2 -->
                                 <div class="skill-outer">
-                                    <h4>JavaScript<span>90%</span></h4>
+                                    <h4>PLC<span>90%</span></h4>
                                     <div class="progress progress-striped active">
                                         <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
                                         </div>
@@ -149,21 +149,13 @@ I am currently in my third year of Mechatronics Engineering at Jyothi Engineerin
                                 </div>
                                 <!-- Skill 3 -->
                                 <div class="skill-outer">
-                                    <h4>Joomla<span>85%</span></h4>
+                                    <h4>PYTHON<span>85%</span></h4>
                                     <div class="progress progress-striped active">
                                         <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">
                                         </div>
                                     </div>
                                 </div>
-                                <!-- Skill 4 -->
-                                <div class="skill-outer">
-                                    <h4>Wordpress<span>95%</span></h4>
-                                    <div class="progress progress-striped active">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%;">
-                                        </div>
-                                    </div>
-                                </div>
-                                <!-- end Skill 4 -->
+                                
                             </div>
                         </div>
                     </div><!-- end row -->
