--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <title>Saviyo's Resume</title>
         <!-- Favicon -->
-        <link rel="shortcut icon" href="images/favicon.png">
+        <link rel="shortcut icon" href="sharp guy.png">
         <!-- ##### STYLESHEETS ##### -->
         <!-- Bootstrap -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -83,22 +83,13 @@
                                     <a href="#about">About me</a>
                                 </li>
                                 <li>
-                                    <a href="#services">Services</a>
-                                </li>
-                                <li>
                                     <a href="#portfolio">Portfolio</a>
                                 </li>
                                 <li>
                                     <a href="#resume">Resume</a>
                                 </li>
                                 <li>
-                                    <a href="#blog">Blog</a>
-                                </li>
-                                <li>
-                                    <a href="#testimonial">Testimonial</a>
-                                </li>
-                                <li>
-                                    <a href="#contact">Conxxctact</a>
+                                    <a href="#contact">Contact</a>
                                 </li>
                             </ul>
                         </div><!-- end Menu -->
@@ -135,7 +126,7 @@ I am currently in my third year of Mechatronics Engineering at Jyothi Engineerin
                                 <div class="skill-outer">
                                     <h4>MATLAB<span>90%</span></h4>
                                     <div class="progress progress-striped active">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 15%;">
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
                                         </div>
                                     </div>
                                 </div>
@@ -151,7 +142,7 @@ I am currently in my third year of Mechatronics Engineering at Jyothi Engineerin
                                 <div class="skill-outer">
                                     <h4>PYTHON<span>85%</span></h4>
                                     <div class="progress progress-striped active">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
                                         </div>
                                     </div>
                                 </div>
