--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ I am currently in my third year of Mechatronics Engineering at Jyothi Engineerin
                                 </div>
                                 <!-- Skill 3 -->
                                 <div class="skill-outer">
-                                    <h4>PYTHON<span>85%</span></h4>
+                                    <h4>PYTHON<span>75%</span></h4>
                                     <div class="progress progress-striped active">
                                         <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
                                         </div>
@@ -333,52 +333,27 @@ I am currently in my third year of Mechatronics Engineering at Jyothi Engineerin
                             <div class="section-title">
                                 <h2><span>04</span>Resume</h2>
                             </div><!-- end Section Title -->
-                            <!-- Resume box 1 -->
-                            <div class="resume-box">
-                                <div>
-                                    <i class="icon_pencil"></i>
-                                </div>
-                                <div>
-                                    <h3>Academy of Art University</h3>
-                                    <span>2015 - Present</span>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                    tempor incididunt ut labore et dolore magna aliqua.</p>
-                                </div>
-                            </div>
+                            
                             <!-- Resume box 2 -->
                             <div class="resume-box">
                                 <div>
                                     <i class="icon_toolbox_alt"></i>
                                 </div>
                                 <div>
-                                    <h3>IT Technical Institute</h3>
-                                    <span>2014 - 2015</span>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                    tempor incididunt ut labore et dolore magna aliqua.</p>
-                                </div>
-                            </div>
-                            <!-- Resume box 3 -->
-                            <div class="resume-box">
-                                <div>
-                                    <i class="icon_genius"></i>
-                                </div>
-                                <div>
-                                    <h3>Web Design School</h3>
-                                    <span>2013 - 2014</span>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                    tempor incididunt ut labore et dolore magna aliqua.</p>
+                                    <h3>Jyothi Engineering College, Cheruthuruthy</h3>
+                                    <span>2019 - 2023</span>
+                                    <p>Mechatronics Robotics and Automation.</p>
                                 </div>
                             </div>
                             <!-- Resume box 4 -->
                             <div class="resume-box">
                                 <div>
-                                    <i class="icon_contacts_alt"></i>
+                                    <i class="icon_puzzle"></i>
                                 </div>
                                 <div>
-                                    <h3>Bachelor Degree</h3>
-                                    <span>2010 - 2013</span>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                    tempor incididunt ut labore et dolore magna aliqua.</p>
+					<h3>Indian School Salalah, Oman</h>
+                                    <span>2017 - 2018</span>
+					<p>High School</p>
                                 </div>
                             </div>
                             <!-- end Resume box 4 -->
