--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <title>Saviyo's Resume</title>
         <!-- Favicon -->
-        <link rel="shortcut icon" href="sharp guy.png">
+        <link rel="shortcut icon" href="sharp guy.jpg">
         <!-- ##### STYLESHEETS ##### -->
         <!-- Bootstrap -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
